# pulpo

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MISSION.md  Makefile  POSITIONING.md  README.md  ROADMAP.md  SPEC.md  dist-workspace.toml  release-please-config.json  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-discord-bot.yml  docker-images.yml  docs-pages.yml  draft-release.yml  release-please.yml  release.yml
.pulpo/: config.toml.example
contrib/: com.pulpo.daemon.plist  pulpo.service
contrib/discord-bot/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
contrib/discord-bot/src/: config.test.ts  config.ts  index.ts
contrib/examples/webhook-discord/: .env.example  README.md  index.mjs  package.json
crates/norn-cli/: Cargo.toml
crates/norn-cli/src/: main.rs
crates/norn-common/: Cargo.toml
crates/norn-common/src/: api.rs  lib.rs  node.rs  session.rs
crates/nornd/: Cargo.toml
crates/nornd/src/: config.rs  main.rs  platform.rs
crates/nornd/src/api/: mod.rs  node.rs  routes.rs  sessions.rs
crates/nornd/src/backend/: docker.rs  mod.rs  tmux.rs
crates/nornd/src/peers/: mod.rs
crates/nornd/src/session/: manager.rs  mod.rs  output.rs  state.rs
crates/nornd/src/store/: mod.rs
crates/pulpo-cli/: Cargo.toml  build.rs
crates/pulpo-cli/src/: format.rs  http.rs  lib.rs  main.rs
crates/pulpo-common/: Cargo.toml
crates/pulpo-common/src/: api.rs  auth.rs  culture.rs  event.rs  guard.rs  knowledge.rs  lib.rs  node.rs  peer.rs  schedule.rs  session.rs
crates/pulpod/: Cargo.toml
crates/pulpod/migrations/: 0001_initial_schema.sql  0002_drop_sandbox.sql  0003_schedule_attempts.sql  0004_webhook_outbox.sql  0005_drop_controller.sql  0006_schedule_budget.sql
crates/pulpod/src/: auth_info.rs  config.rs  coverage_macros.rs  guard.rs  lib.rs  main.rs  platform.rs  remote.rs
crates/pulpod/src/api/: auth.rs  config.rs  culture.rs  detections.rs  embed.rs  error.rs  event_push.rs  events.rs  fleet.rs  health.rs  inks.rs  knowledge.rs  metrics.rs  mod.rs  node.rs  node_auth.rs  node_commands.rs  notifications.rs  peers.rs  personas.rs  providers.rs  push.rs  routes.rs  schedules.rs  secrets.rs  session_remote.rs  sessions.rs  sessions_tests.rs  static_files.rs  test_support.rs  usage.rs  watchdog.rs  worker_auth.rs  worker_commands.rs  ws.rs
crates/pulpod/src/backend/: docker.rs  mod.rs  tmux.rs
crates/pulpod/src/controller/: command_queue.rs  mod.rs  session_index.rs  stale_cleanup.rs
crates/pulpod/src/culture/: mod.rs  repo.rs  sync.rs
crates/pulpod/src/discovery/: mdns.rs  mod.rs  seed.rs  tailscale.rs
crates/pulpod/src/knowledge/: mod.rs  repo.rs
crates/pulpod/src/master/: command_queue.rs  session_index.rs  stale_cleanup.rs
crates/pulpod/src/mcp/: mod.rs  resources.rs
crates/pulpod/src/node/: command_poll.rs  event_push.rs  mod.rs
crates/pulpod/src/notifications/: action_token.rs  discord.rs  mod.rs  outbox.rs  web_push.rs  webhook.rs
crates/pulpod/src/peers/: health.rs  mod.rs
crates/pulpod/src/schedule/: mod.rs
crates/pulpod/src/scheduler/: mod.rs
crates/pulpod/src/session/: manager.rs  mod.rs  names.rs  output.rs  pty_bridge.rs  state.rs  utils.rs
crates/pulpod/src/store/: controller.rs  controller_index.rs  core.rs  enrolled_nodes.rs  mod.rs  outbox.rs  push.rs  rows.rs  schedules.rs  secrets.rs  session_interventions.rs  session_metadata.rs  sessions.rs  tests.rs
crates/pulpod/src/usage/: claude.rs  codex.rs  mod.rs  pi.rs  pool.rs  projection.rs  scan.rs
crates/pulpod/src/watchdog/: adopt.rs  budget.rs  burn.rs  git.rs  idle.rs  intervention.rs  memory.rs  metadata.rs  mod.rs  output_patterns.rs  tests.rs
crates/pulpod/src/worker/: command_poll.rs  event_push.rs
docker/: .env.example  README.md
docker/agents/: Dockerfile  entrypoint.sh
docker/base/: Dockerfile  entrypoint.sh
docker/compose/: agents.yml  base.yml  discord-bot.yml  tailscale.yml
docs/: .gitignore  README.md  llms.txt  package-lock.json  package.json
docs/.vuepress/: config.ts
docs/.vuepress/styles/: index.scss  palette.scss
docs/architecture/: core-concepts.md  overview.md
docs/getting-started/: alternatives.md  install.md  quickstart.md  use-cases.md  why-pulpo.md
docs/guides/: agent-examples.md  configuration.md  controller-node-setup.md  culture.md  discovery.md  docker-isolated-risky-tasks.md  nightly-code-review.md  parallel-agents-one-repo.md  plan-then-build.md  private-infra-with-tailscale.md  recovery.md  remote-control.md  secrets.md  worktrees.md
docs/operations/: release-and-distribution.md  session-lifecycle.md
docs/reference/: api.md  cli.md  config.md  push.md
examples/: README.md
examples/api/: events.sh  health.sh  schedules.sh  spawn.sh
examples/cli/: 01-basic-spawn.sh  02-spawn-and-detach.sh  03-spawn-with-ink.sh  04-idle-threshold.sh  05-attach-and-input.sh  06-recovery.sh  07-adopt-tmux.sh  08-multi-node.sh  09-scheduled-sessions.sh  10-batch-spawn.sh  11-docker-runtime.sh  11-docker-sandbox.sh  recovery-after-reboot.sh  schedule-nightly-review.sh  spawn-with-ink.sh  spawn-with-persona.sh
examples/config/: discord-webhook.toml  docker.toml  inks.toml  lan-with-auth.toml  minimal.toml  multi-node-public.toml  multi-node-tailscale.toml  personas.toml  public-with-auth.toml  sandbox.toml  watchdog.toml
examples/discord-bot/: .env.example  quickstart.md
scripts/: demo.sh  e2e.sh  install-pulpo.sh
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  app.css  app.html  index.css  sw.ts  test-setup.ts
web/src/api/: client.test.ts  client.ts  connection.test.ts  connection.ts  types.test.ts  types.ts
web/src/hooks/: use-connection.test.tsx  use-connection.tsx  use-push-notifications.test.tsx  use-push-notifications.tsx  use-schedules-filter.ts  use-sse.test.tsx  use-sse.tsx
web/src/lib/: api.test.ts  api.ts  (+9 more)
(+143 files in other folders)
