[workspace]
resolver = "2"
members = [
    "crates/pulpod",
    "crates/pulpo-cli",
    "crates/pulpo-common",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.package]
version = "0.0.31"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darioblanco/pulpo"
homepage = "https://github.com/darioblanco/pulpo"
description = "Agent session orchestrator — manage coding agents across your machines"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client (for peer communication)
reqwest = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Web UI embedding
rust-embed = "8"
mime_guess = "2"

# PTY and streaming
pty-process = { version = "0.4", features = ["async"] }
rustix = { version = "0.38", features = ["termios"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Crypto / encoding
rand = "0.10"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
p256 = "0.13"
web-push = "0.11"
# Vendored OpenSSL for Windows builds (web-push depends on openssl via isahc/curl)
openssl = { version = "0.10", features = ["vendored"] }

# Service discovery
mdns-sd = "0.18"

# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
schemars = { version = "1", features = ["chrono04", "uuid1"] }

# Cron scheduling
cron = "0.15"

# System
hostname = "0.4"
shellexpand = "3"
dirs = "6"
num_cpus = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
