[package]
name = "norn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Norn CLI — manage agent sessions from the terminal"

[[bin]]
name = "norn"
path = "src/main.rs"

[dependencies]
norn-common = { path = "../norn-common" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
