[package]
name = "norn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for norn daemon and CLI"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[lints]
workspace = true
