[package]
name = "nornd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Norn daemon — manages agent sessions via tmux/Docker"

[[bin]]
name = "nornd"
path = "src/main.rs"

[dependencies]
norn-common = { path = "../norn-common" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
hostname.workspace = true
shellexpand.workspace = true
dirs.workspace = true
num_cpus.workspace = true

[dev-dependencies]
axum-test = "16"
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
