[package]
name = "pulpo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pulpo CLI — manage agent sessions from the terminal"

[package.metadata.dist]
dist = true

[lib]
name = "pulpo_cli"
path = "src/lib.rs"

[[bin]]
name = "pulpo"
path = "src/main.rs"

[dependencies]
pulpo-common = { path = "../pulpo-common", version = "0.0.20" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
anyhow.workspace = true

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true

[lints]
workspace = true
